<resources>
    <string name="app_name">Footpath</string>



    //bottom navigation
    <string name="explore">Explore</string>
    <string name="record">Record</string>
    <string name="history">My tracks</string>

    //Intro Activity
    <string name="intro_1_title">Looking for places to escape the routine?</string>
    <string name="intro_1_subtitle">Explore routes to walk, run and hike near you or for your next destination</string>
    <string name="intro_2_title">Discovery new places</string>
    <string name="intro_2_subtitle">Search and organize your next tracks</string>
    <string name="intro_3_title">Create and share your tracks</string>
    <string name="intro_3_subtitle">You can record and share tracks, so people can enjoy as well</string>
    <string name="intro_4_subtitle">Simple, easy and free</string>
    <string name="register_email">Register with e-mail</string>
    <string name="register">Register</string>
    <string name="signin">Sign in</string>
    <string name="lets_start">Let\'s start</string>
    <string name="close">Close</string>

    //type track
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="hiking">Hiking</string>

    //type route
    <string name="point_to_point">Point to point</string>
    <string name="loop">Loop</string>

    //Reset Password Activity
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="email_sent">Check your e-mail box, an e-mail was sent to reset the password.</string>

    //Register Activity
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fields_empty">All information must be inform</string>
    <string name="success_register">Registered successfully</string>
    <string name="weak_password">Password is weak</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="user_collision">E-mail already registered</string>
    <string name="error_user_register">Error to register user, please try again</string>
    <string name="required_name">Please insert name</string>
    <string name="required_confirm_password">Please insert confirm password</string>
    <string name="password_dont_match">Passwords don\'t match</string>

    //Login Activity
    <string name="required_email">Please insert e-mail</string>
    <string name="required_password">Please insert password</string>
    <string name="invalid_credentials">Invalid E-mail/Password</string>
    <string name="invalid_user">Invalid user</string>
    <string name="forgot_pasword">Forgot password?</string>
    <string name="google_failed">Google sign in failed</string>
    <string name="facebook_failed">Facebook sign in failed</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_facebook">Sign in with Facebook</string>
    <string name="new_account">Doesn\'t have an account?</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="or">-- OR --</string>

    //Util
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="difficult">Difficult</string>
    <string name="required">Required</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="action_not_possible">Action not possible while recording track</string>
    <string name="battery_saver_on">Please disable \'Battery saver mode\' to have an accurate GPS tracking</string>

    //Menu
    <string name="signout">Sign out</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_hint">Search here</string>
    <string name="edit">Edit</string>

    //Track Activity
    <string name="download">Download track</string>
    <string name="delete_offline">Delete offline track</string>
    <string name="about">About</string>
    <string name="track_route">Track route</string>
    <string name="created_by">Created by:</string>
    <string name="my_track">My track</string>
    <string name="offline">Offline track</string>
    <string name="offline_download">Track downloaded to \'My tracks\' </string>
    <string name="offline_delete">Track deleted from offline tracks</string>
    <string name="error_delete_track">Error in deleting track</string>
    <string name="action_not_possible_offline">Action not possible for offline track</string>
    <string name="favorite_add">Track added to \'My tracks\' </string>
    <string name="favorite_remove">Favorite removed</string>
    <string name="rate_it"><u>Rate it</u></string>
    <string name="change_rate"><u>Change previous rate</u></string>
    <string name="rate_success">Rated successfully</string>

    //Profile Activity
    <string name="success_image_upload">Success to upload profile photo</string>
    <string name="error_image_upload">Error to upload profile photo!</string>
    <string name="success_change_name">Success to change name</string>
    <string name="save">Save</string>

    //Save Track Activity
    <string name="required_title">Please insert a title</string>
    <string name="required_description">Please insert a Description</string>
    <string name="delete_track">Do you want to delete the track?</string>
    <string name="how_difficult">How difficult was the track?</string>
    <string name="min_distance">The track must have at least 200 meters</string>
    <string name="track_type">Track type</string>
    <string name="exercise_type">Exercise type</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="min_km">Min/km</string>
    <string name="general_information">General Information</string>
    <string name="title">Title</string>
    <string name="image">Images</string>
    <string name="description_track">Description about the track</string>
    <string name="title_hint">Heaphy Track</string>
    <string name="description_hint">This ancient Maori trail crosses over tussock downs to lush forests, through Nikau palms and onward to the roaring seas of the West Coast.</string>
    <string name="saving_track">Saving track…</string>
    <string name="go">Go</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="save_track">The track has been sent successfully</string>
    <string name="title_limit">Title has limit of 35 letters</string>

    //Image Activity
    <string name="upload_image">Uploading image…</string>
    <string name="upload_image_success">Image uploaded with Success</string>
    <string name="error_upload">Error in uploading image</string>
    <string name="no_tracks">No tracks found</string>
    <string name="no_images">No images found, use the "button" to add pictures</string>

    //Record Activity
    <string name="choose_option">Choose an option</string>
    <string name="timer">Time</string>
    <string name="time_zero">00:00</string>
    <string name="zero">0 km</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="hello">Hello</string>

    //Dialog
    <string name="attention">Attention</string>
    <string name="ok">Okay</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="denied_permission">Please accept the required permission to continue</string>
    <string name="denied_permission_gps">Footpath needs the access for the location to continue</string>
    <string name="loading">Loading…</string>
    <string name="background_running">Footpath is tracking your steps</string>
    <string name="open">Open</string>
    <string name="done">Done</string>
    <string name="choose_rate">Choose a rate</string>
    <string name="no_internet">Action not possible, no internet connection</string>

    //Loading messages
    <string name="loading_1">Locating the required gigabytes to render…</string>
    <string name="loading_2">Spinning up the hamster…</string>
    <string name="loading_3">Shovelling coal into the server…</string>
    <string name="loading_4">Please wait until the sloth starts moving</string>
    <string name="loading_5">Don\'t think of purple hippos…</string>
    <string name="loading_6">We\'re building the buildings as fast as we can</string>
    <string name="loading_7">(Insert quarter)</string>


</resources>
