<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/ic_intro_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/intro_2_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_2_subtitle"
        android:textAlignment="center"
        android:textColor="@color/introSubtitle"
        android:textSize="15sp" />
</LinearLayout>